[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1020.0
margin_bottom = 599.0

[node name="Button" type="Button" parent="."]
margin_left = 66.0
margin_top = 45.0
margin_right = 236.0
margin_bottom = 102.0
text = "test string"

[node name="Button2" type="Button" parent="."]
margin_left = 286.0
margin_top = 48.0
margin_right = 456.0
margin_bottom = 105.0
text = "test array"

[node name="Button3" type="Button" parent="."]
margin_left = 535.0
margin_top = 48.0
margin_right = 705.0
margin_bottom = 105.0
text = "test dictionary"

[node name="Button4" type="Button" parent="."]
margin_left = 69.0
margin_top = 138.0
margin_right = 239.0
margin_bottom = 195.0
text = "test pool_byte_array"

[node name="Button5" type="Button" parent="."]
margin_left = 288.0
margin_top = 143.0
margin_right = 458.0
margin_bottom = 200.0
text = "test pool_int_array"

[node name="Button6" type="Button" parent="."]
margin_left = 539.0
margin_top = 152.0
margin_right = 709.0
margin_bottom = 209.0
text = "test pool_string_array"

[node name="Button7" type="Button" parent="."]
margin_left = 64.0
margin_top = 245.0
margin_right = 234.0
margin_bottom = 302.0
text = "test variant"
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="Button7" to="." method="_on_Button7_pressed"]
